feat/exercise: lession 2
